[gd_scene load_steps=36 format=3 uid="uid://7g8rierpqv3s"]

[ext_resource type="Script" uid="uid://c5jiw7ukrne6r" path="res://scripts/TutorialScreen.gd" id="1_owd46"]
[ext_resource type="Texture2D" uid="uid://b3rhaybo6ky2x" path="res://assets/sprites/background/TutorialBackground.png" id="2_pbp27"]
[ext_resource type="Texture2D" uid="uid://b14u6jcj8mtwo" path="res://assets/sprites/player/tutorial/dodgeleft/dl1.PNG" id="3_3oerv"]
[ext_resource type="Texture2D" uid="uid://clbey1faemr56" path="res://assets/sprites/player/tutorial/punchleft/f1b.PNG" id="3_5im2b"]
[ext_resource type="Texture2D" uid="uid://djxl1cafvtcew" path="res://assets/sprites/player/OpponentR1X5Left.png" id="4_6eph6"]
[ext_resource type="Texture2D" uid="uid://dwtvkac46yc0o" path="res://assets/sprites/player/tutorial/punchleft/f2b.PNG" id="4_8ucgo"]
[ext_resource type="Texture2D" uid="uid://dfynel6qvb03n" path="res://assets/sprites/player/tutorial/dodgeleft/dl2.PNG" id="4_qjpvs"]
[ext_resource type="Texture2D" uid="uid://bj6f0w5uqm2nx" path="res://assets/sprites/player/tutorial/punchleft/f3b.PNG" id="5_6qs70"]
[ext_resource type="Texture2D" uid="uid://bwrd440uf1gt1" path="res://assets/sprites/player/tutorial/dodgeleft/dl3a.PNG" id="5_yop0t"]
[ext_resource type="Texture2D" uid="uid://h8lrqdhvx17j" path="res://assets/sprites/player/tutorial/punchleft/f4b.PNG" id="6_8uneh"]
[ext_resource type="Texture2D" uid="uid://dgujogukqs7wb" path="res://assets/sprites/player/tutorial/dodgeleft/dl5.PNG" id="6_m1hlb"]
[ext_resource type="Texture2D" uid="uid://b8u4k6jkcjm1v" path="res://assets/sprites/player/tutorial/punchleft/f5b.PNG" id="7_e8mxa"]
[ext_resource type="Texture2D" uid="uid://c7muavfs2sliv" path="res://assets/sprites/player/tutorial/dodgeleft/dl4.PNG" id="7_h6v0s"]
[ext_resource type="AudioStream" uid="uid://dp5w7d12gikae" path="res://assets/audio/06. Training - Intro.mp3" id="8_8ucgo"]
[ext_resource type="Texture2D" uid="uid://18gdpdxktwoa" path="res://assets/sprites/player/tutorial/dogderight/dr1.PNG" id="8_ovy4y"]
[ext_resource type="Texture2D" uid="uid://bb1422nplo1m4" path="res://assets/sprites/player/tutorial/dogderight/dr2.PNG" id="9_cndft"]
[ext_resource type="Texture2D" uid="uid://bbkdbud6t7fej" path="res://assets/sprites/player/tutorial/dogderight/dr3.PNG" id="10_pbp27"]
[ext_resource type="Texture2D" uid="uid://bbji4glwpc52v" path="res://assets/sprites/player/tutorial/dogderight/dr4.PNG" id="11_vyxqq"]
[ext_resource type="Texture2D" uid="uid://cb1x8p60cij7b" path="res://assets/sprites/player/tutorial/dogderight/dr5.PNG" id="12_6eph6"]
[ext_resource type="Texture2D" uid="uid://b3q7rxuuqigui" path="res://assets/sprites/player/tutorial/punchright/f1r.PNG" id="13_1y52w"]
[ext_resource type="Texture2D" uid="uid://btttc23var7qk" path="res://assets/sprites/player/tutorial/punchright/f3b.PNG" id="14_heifu"]
[ext_resource type="Texture2D" uid="uid://qn5jfjfrupfa" path="res://assets/sprites/player/tutorial/punchright/f2b.PNG" id="15_hi0w4"]
[ext_resource type="Texture2D" uid="uid://oiiwgr7wewvo" path="res://assets/sprites/player/tutorial/punchright/f4r.PNG" id="16_gwh12"]
[ext_resource type="Texture2D" uid="uid://cxa6r6knovhe6" path="res://assets/sprites/player/tutorial/punchright/f5r.PNG" id="17_jojuk"]
[ext_resource type="Texture2D" uid="uid://bf35m2mx68lgd" path="res://assets/sprites/background/DialogBubble.png" id="25_pbp27"]
[ext_resource type="FontFile" uid="uid://bj3gbo6ub2o6a" path="res://assets/fonts/Connection.otf" id="26_7pu2k"]
[ext_resource type="AudioStream" uid="uid://dayu4w8s1oped" path="res://assets/audio/click.mp3" id="27_6eph6"]
[ext_resource type="Texture2D" uid="uid://cptgibfcb6qcf" path="res://assets/sprites/buttons/play.png" id="27_7pu2k"]
[ext_resource type="AudioStream" uid="uid://elihgc8i5h4k" path="res://assets/audio/opponentpunch.mp3" id="28_yji7m"]
[ext_resource type="Texture2D" uid="uid://cfc5wbk4brug" path="res://assets/sprites/buttons/again.png" id="30_dqa4r"]
[ext_resource type="Texture2D" uid="uid://se1wgeh7s5lu" path="res://assets/sprites/player/HannahCoach.png" id="31_gbl7h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yji7m"]
atlas = ExtResource("4_6eph6")
region = Rect2(283, 0, 283, 507)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pu2k"]
atlas = ExtResource("4_6eph6")
region = Rect2(0, 0, 283, 507)

[sub_resource type="SpriteFrames" id="SpriteFrames_8uneh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_3oerv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yji7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pu2k")
}],
"loop": false,
"name": &"block",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_3oerv")
}, {
"duration": 1.0,
"texture": ExtResource("4_qjpvs")
}, {
"duration": 1.0,
"texture": ExtResource("5_yop0t")
}, {
"duration": 1.0,
"texture": ExtResource("6_m1hlb")
}, {
"duration": 1.0,
"texture": ExtResource("7_h6v0s")
}],
"loop": false,
"name": &"dodge_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ovy4y")
}, {
"duration": 1.0,
"texture": ExtResource("9_cndft")
}, {
"duration": 1.0,
"texture": ExtResource("10_pbp27")
}, {
"duration": 1.0,
"texture": ExtResource("11_vyxqq")
}, {
"duration": 1.0,
"texture": ExtResource("12_6eph6")
}],
"loop": false,
"name": &"dodge_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5im2b")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5im2b")
}, {
"duration": 1.0,
"texture": ExtResource("4_8ucgo")
}, {
"duration": 1.0,
"texture": ExtResource("5_6qs70")
}, {
"duration": 1.0,
"texture": ExtResource("6_8uneh")
}, {
"duration": 1.0,
"texture": ExtResource("7_e8mxa")
}],
"loop": false,
"name": &"punch_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_1y52w")
}, {
"duration": 1.0,
"texture": ExtResource("14_heifu")
}, {
"duration": 1.0,
"texture": ExtResource("15_hi0w4")
}, {
"duration": 1.0,
"texture": ExtResource("16_gwh12")
}, {
"duration": 1.0,
"texture": ExtResource("17_jojuk")
}],
"loop": false,
"name": &"punch_right",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pbp27"]
content_margin_left = 80.0
content_margin_top = 65.0
content_margin_right = 15.0
content_margin_bottom = 20.0

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_owd46")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1157.0
offset_bottom = 649.0
texture = ExtResource("2_pbp27")
expand_mode = 1

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(867, 401)
scale = Vector2(0.798901, 0.861328)
sprite_frames = SubResource("SpriteFrames_8uneh")
animation = &"block"
frame = 2
frame_progress = 1.0

[node name="TutorialMusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_8ucgo")
parameters/looping = true

[node name="Bubble" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 175.0
offset_top = 123.0
offset_right = 504.0
offset_bottom = 409.0
texture = ExtResource("25_pbp27")

[node name="tutor" type="Label" parent="Bubble"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.596078, 0, 1, 1)
theme_override_fonts/font = ExtResource("26_7pu2k")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_pbp27")
text = "Coach teaches boxing
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="GamePlayButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(150, 50)
layout_mode = 0
offset_left = 572.0
offset_top = 565.0
offset_right = 803.0
offset_bottom = 642.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("27_7pu2k")
ignore_texture_size = true
stretch_mode = 3

[node name="ButtonClickPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("27_6eph6")

[node name="PunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("28_yji7m")

[node name="AgainButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 308.0
offset_top = 554.0
offset_right = 608.0
offset_bottom = 654.0
texture_normal = ExtResource("30_dqa4r")
stretch_mode = 3

[node name="Coach" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 298.0
offset_right = 293.0
offset_bottom = 694.0
texture = ExtResource("31_gbl7h")
expand_mode = 1

[connection signal="animation_finished" from="PlayerSprite" to="." method="_on_player_sprite_animation_finished"]
[connection signal="pressed" from="GamePlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="AgainButton" to="." method="_on_again_button_pressed"]
